platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam01-next_character/runtime/traces/bundle-audit.exams-exam01-next_character/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam01-next_character/runtime/workspaces/bundle-audit.exams-exam01-next_character/submission/next_character.c: In function 'next_character':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam01-next_character/runtime/workspaces/bundle-audit.exams-exam01-next_character/submission/next_character.c:12:1: error: control reaches end of non-void function [-Werror=return-type]
   12 | }
      | ^
cc1: all warnings being treated as errors
